change2( row gap issue)

--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@ footer .top .left{
     width: 90%;
     /* background-color: #f0ffff0f; */
 }
-footer .top .column1 ul{
-    row-gap: 12px  ;
+footer .top .column1 .banner{
+    row-gap: 11px  ;
 }
 footer .top .column{
     display: flex;
@@ -268,7 +268,7 @@ footer .top .left  ul{
     display: flex;
     flex-direction: column;
     width: 241px;
-    row-gap: 15px;
+    row-gap: 8px;
 }
 footer .top .left ul .bold{
     list-style-type: none;
@@ -287,6 +287,7 @@ footer .top .column .opt a{
     font-size: 12px;
     color: #787878;
     font-weight: 600;
+    padding: 6px 0px;
 }
 
 footer .top .column .opt a:hover{
